# kwin

./: CMakeLists.txt
cmake/modules/: FindLibseat.cmake
src/: CMakeLists.txt  abstract_client.cpp  abstract_wayland_output.h  appmenu.cpp  composite.cpp  config-kwin.h.cmake  dbusinterface.cpp  debug_console.cpp  debug_console.h  dpmsinputeventfilter.cpp  effects.cpp  effects.h  events.cpp  input.cpp  inputmethod.h  internal_client.cpp  keyboard_input.cpp  keyboard_repeat.cpp  main.cpp  main_wayland.cpp  main_x11.cpp  modifier_only_shortcuts.cpp  options.cpp  platform.cpp  platform.h  pointer_input.cpp  pointer_input.h  popup_input_filter.cpp  renderloop.cpp  scene.cpp  screenedge.cpp  screenlockerwatcher.cpp  screens.cpp  session_consolekit.cpp  session_logind.cpp  session_noop.cpp  shadow.cpp  surfaceitem_wayland.h  tablet_input.cpp  tabletmodemanager.cpp  (+16 more)
src/backends/: CMakeLists.txt
src/backends/drm/: drm_dumb_buffer.cpp
src/core/: session.cpp  session.h  session_consolekit.cpp  session_libseat.cpp  session_libseat.h  session_logind.cpp  session_noop.cpp
src/decorations/: decorationbridge.cpp
src/effects/: CMakeLists.txt  effect_builtins.cpp  strip-effect-metadata.py
src/effects/desktopgrid/: desktopgrid.cpp
src/effects/screenedge/: screenedgeeffect.cpp  screenedgeeffect.h
src/kcmkwin/: CMakeLists.txt
src/libkwineffects/: CMakeLists.txt  kwinconfig.h.cmake  kwindeformeffect.h  kwineffectquickview.cpp  kwineffectquickview.h  kwineffects.cpp  kwineffects.h  kwinglplatform.h  logging_p.h
src/platformsupport/scenes/qpainter/: CMakeLists.txt  qpainterbackend.cpp  qpainterbackend.h
src/plugins/: CMakeLists.txt
src/plugins/colord-integration/: colordintegration.cpp
src/plugins/kpackage/aurorae/: kwin-packagestructure-aurorae.json
src/plugins/kpackage/decoration/: kwin-packagestructure-decoration.json
src/plugins/kpackage/effect/: kwin-packagestructure-effect.json
src/plugins/kpackage/scripts/: kwin-packagestructure-scripts.json
src/plugins/kpackage/windowswitcher/: kwin-packagestructure-windowswitcher.json
src/plugins/scenes/: CMakeLists.txt
src/plugins/scenes/qpainter/: scene_qpainter.cpp  scene_qpainter.h
src/scripting/: thumbnailitem.cpp  thumbnailitem.h
src/xwl/: drag.cpp  xwayland.cpp
(+9 files in other folders)
