add_subdirectory(kglobalaccel)
if(KWIN_BUILD_WAYLAND)
    add_subdirectory(qpa)
endif()
if (KWIN_BUILD_IDLETIME)
  add_subdirectory(idletime)
endif()
add_subdirectory(platforms)
add_subdirectory(scenes)
add_subdirectory(windowsystem)
add_subdirectory(kpackage)
if (KWIN_BUILD_CMS)
    add_subdirectory(nightcolor)
endif()
if (KWIN_BUILD_DECORATIONS)
    add_subdirectory(kdecorations)
endif()
if (PipeWire_FOUND)
    add_subdirectory(screencast)
endif()
if (KWIN_BUILD_CMS)
    add_subdirectory(colord-integration)
endif()
if (KWIN_BUILD_RUNNERS)
    add_subdirectory(krunner-integration)
endif()
